# current_paychecks

./: README.md  setup.cfg
.github/workflows/: main.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4090a0c98fcd_initial.py
backend/src/: config.py  database.py  main.py  routers.py
backend/src/api/: crud.py  models.py  routers.py  schemas.py
backend/src/auth/: crud.py  middleware.py  models.py  routers.py  schemas.py
backend/tests/: conftest.py  test_ruoters.py
infra/: .env.example  docker-compose.yml
