[tool.poetry]
name = "current-paychecks"
version = "0.1.0"
description = "REST-сервис просмотра текущей зарплаты и даты следующего повышения"
authors = ["exp-ext <ext77@yandex.ru>"]
readme = "README.md"
packages = [{include = "current_paychecks"}]

[tool.poetry.dependencies]
python = "^3.10.6"
asyncpg = "^0.27.0"
databases = {version = "^0.7.0", extras = ["postgresql"]}
psycopg2-binary = "^2.9.6"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
SQLAlchemy = "^1.4.48"
python-dotenv = "^1.0.0"
alembic = "^1.11.1"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
pyjwt = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
